--- a/friend.html
+++ b/friend.html
@@ -131,7 +131,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>Yor screen is too big ㅠㅠ</span>
+      <span>Yor screen is super big ㅠㅠ</span>
     </div>
 
     <div id="no-vertical">
