--- a/index.html
+++ b/index.html
@@ -29,17 +29,15 @@
       </p>
     </header>
 
-    <form action="friends.html" method="get" id="login-form">
+    <form action="friend.html" method="get" id="login-form">
       <input name="username" type="text" placeholder="Email or phone number" />
       <input name="password" type="password" placeholder="Password" />
-      <a href="friend.html">
-        <input type="submit" value="Log In" />
-      </a>
+      <input type="submit" value="Log In" />
       <a href="#">Find Kakao Account or Password</a>
     </form>
 
     <div id="no-mobile">
-      <span>Yor screen is too big ㅠㅠ</span>
+      <span>Yor screen is too big :( ㅠㅠ</span>
     </div>
 
     <div id="no-vertical">
