--- a/chat.html
+++ b/chat.html
@@ -41,9 +41,7 @@
       <div class="chat__timestamp">Tuesday, June 30, 2020</div>
 
       <div class="message-row">
-        <img
-          src="file:///C:/Users/USER/Desktop/kokoa-clone-2020/%EC%82%AC%EB%82%98%EC%94%A8.png"
-        />
+        <img src="사나씨.png" />
         <div class="message-row__content">
           <span class="message__author">Sana</span>
           <div class="message__info">
