--- a/find.html
+++ b/find.html
@@ -3,7 +3,10 @@
   <head>
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi"
+    />
     <title>Find - Kokoa Clone</title>
   </head>
   <body>
